<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoogleLoginActivity">


    <ImageView
        android:id="@+id/googleLogo"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        app:srcCompat="@drawable/google_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameCommand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleLogo" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10sp"
        android:text=""
        app:layout_constraintStart_toEndOf="@id/nameCommand"
        app:layout_constraintTop_toBottomOf="@+id/googleLogo" />

    <TextView
        android:id="@+id/emailCommand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30sp"
        android:textSize="20sp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameCommand" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20sp"
        android:text=""
        app:layout_constraintStart_toEndOf="@id/emailCommand"
        app:layout_constraintTop_toBottomOf="@+id/nameCommand" />

    <TextView
        android:id="@+id/idCommand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30sp"
        android:textSize="20sp"
        android:text="@string/id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailCommand" />

    <EditText
        android:id="@+id/idInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20sp"
        android:text=""
        app:layout_constraintStart_toEndOf="@id/idCommand"
        app:layout_constraintTop_toBottomOf="@+id/emailCommand" />

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signOut"
        android:layout_marginTop="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idInput"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/viewBookingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_bookings"
        android:layout_marginTop="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signOutButton"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>