<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BCIT"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/recreationActivities"
        android:layout_width="match_parent"
        android:layout_height="394dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mix"
        android:contentDescription="@string/recreationActs" />

    <ImageView
        android:id="@+id/bcitLogo"
        android:layout_width="89dp"
        android:layout_height="67dp"
        android:layout_weight="1"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bcitlogo"
        android:contentDescription="@string/bcitlogo" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="239dp"
        android:layout_height="68dp"
        android:layout_marginStart="116dp"
        android:layout_weight="1"
        android:gravity="end|center_vertical"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="@+id/bcitLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:onClick="openURL"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recreationActivities"
        android:layout_marginTop="100dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
